--- a/CourierApi/appsettings.json
+++ b/CourierApi/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "AppCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CourierDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" }
+  "ConnectionStrings": { "AppCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CourierApi;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" }
 }
